[tool.poetry]
name = "gpt-slack-matome"
version = "0.1.0"
description = ""
authors = ["Kazato Sugimoto <uiureo@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_slack_matome"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^0.27.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
